@@ -7,8 +7,10 @@ AUX onscripter-en-20091215-cxxflags.patch 414 RMD160 3253090c088b60a549be24976fe
 DIST onscripter-en-20091215-src.tar.bz2 446915 RMD160 2460c0ae516d079e602eacc7da9f96267778dfb2 SHA1 bf7b3f40fb12a7bc295852839211cb2fd4672ab1 SHA256 af6a4c603e0ab6122e8220b16fd21a151e7e284bb06cdc94220c5bf59ea2cca9
 DIST onscripter-en-20091227-src.tar.bz2 606007 RMD160 2f8b62e4781ce25191bf48cef226031262ea616d SHA1 52776c7902bf2721465bdf20c8a9baddcefa9110 SHA256 dc355a957e32ea6805f5224644dde3d5baf4370fe95342f1d3a5d5735b39e1a5
 DIST onscripter-en-20091231-src.tar.bz2 607190 RMD160 50bb56da328fa3d90d988374508c0de9a7318c3d SHA1 17b512179662ca19c963d416318dba9643e6c15a SHA256 ac31a7d17ded17ae72688204d689f09b0301f3b4fc6d0308f05a7c22fef2c2f8
+DIST onscripter-en-20100107-src.tar.bz2 534855 RMD160 ad6f174a3e91ebaa1f98a44116b0e6de82646f1e SHA1 4ad5524c47b0da024a1c6b0743698f039a91344b SHA256 38bf6514cb7f3eb550992267b3b8a7719bb336c4a707e58aa91c64829608fe08
 EBUILD onscripter-en-20091215.ebuild 963 RMD160 ce97f39fc5909ed58c15ffc8aada059101a148a8 SHA1 4f14a682dfb3f7aabe1fc8a1902023d8d6da79d0 SHA256 8ba9c19fd7d30ca79ad9333493179c26bb422a98ffb08984eefb272d076b9768
 EBUILD onscripter-en-20091227.ebuild 983 RMD160 868861575a5041eda1aa16e3f7c2b5208c1bb881 SHA1 5d1b03a1db6cfb5a613579d2d6d3fba9645f4e7a SHA256 70e58175c48e9c134bd0d271945f003ebfcb7ed61489bbb8217bb0458f090b5b
 EBUILD onscripter-en-20091231.ebuild 983 RMD160 868861575a5041eda1aa16e3f7c2b5208c1bb881 SHA1 5d1b03a1db6cfb5a613579d2d6d3fba9645f4e7a SHA256 70e58175c48e9c134bd0d271945f003ebfcb7ed61489bbb8217bb0458f090b5b
-MISC ChangeLog 1923 RMD160 882a7ac776ee20bda90c7f2645585fd72bef4cf3 SHA1 999f7afa8fe6bbd6d6df0e30b884259517543f97 SHA256 bea9da32d5dd89627b827acb11de66fadd9bcfc5d1d7bfaaf72248aa0c871b8c
+EBUILD onscripter-en-20100107.ebuild 983 RMD160 868861575a5041eda1aa16e3f7c2b5208c1bb881 SHA1 5d1b03a1db6cfb5a613579d2d6d3fba9645f4e7a SHA256 70e58175c48e9c134bd0d271945f003ebfcb7ed61489bbb8217bb0458f090b5b
+MISC ChangeLog 2056 RMD160 8d2ebc7a5fb1f149c3e4cb05297378030227fe24 SHA1 0ab478292213ae288a4d199e38ccbca776c49290 SHA256 182b8d00ae450cb70268a6dd050e518a0d8a689d195caf3961b88e0497e563aa
 MISC metadata.xml 322 RMD160 ae392e7983f4f4d718e919c9d6e42a90d626f770 SHA1 25298823cab9b1a65fd253e1eaf821f2ee1b8148 SHA256 7a1a4d7e2ddfb9cdbda7afab27c0a24e70f150b73ae99565acaf6f656d15a7fe
